--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 .fade {
   -webkit-animation-name: fade;
-          animation-name: fade;
+  animation-name: fade;
   -webkit-animation-duration: 2.5s;
-          animation-duration: 2.5s;
+  animation-duration: 2.5s;
   -webkit-animation-name: fade;
   -webkit-animation-duration: 2.5s;
 }
@@ -24,9 +24,9 @@
 }
 .more-splash {
   -webkit-animation-name: splash;
-          animation-name: splash;
+  animation-name: splash;
   -webkit-animation-duration: 1.7s;
-          animation-duration: 1.7s;
+  animation-duration: 1.7s;
 }
 @-webkit-keyframes splash {
   from {
@@ -78,26 +78,26 @@ header ul {
   display: flex;
   list-style-type: none;
   -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   color: #fff;
 }
 header ul li:after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 1px;
   background-color: #c78030;
   margin-top: 4px;
   -webkit-transition: 0.4s;
-          transition: 0.4s;
+  transition: 0.4s;
 }
 header ul li:before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   right: 0;
@@ -105,7 +105,7 @@ header ul li:before {
   background-color: #c78030;
   margin-top: 4px;
   -webkit-transition: 0.4s;
-          transition: 0.4s;
+  transition: 0.4s;
 }
 .main {
   height: 650px;
@@ -129,7 +129,7 @@ header ul li:before {
   font-weight: bold;
 }
 .main-block-link:after {
-  content: '';
+  content: "";
   display: block;
   width: 10%;
   height: 3px;
@@ -171,8 +171,8 @@ header ul li:before {
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
 }
 .content .info-header-tab {
   color: #c78030;
@@ -181,14 +181,14 @@ header ul li:before {
   cursor: pointer;
 }
 .content .info-header-tab:after {
-  content: '';
+  content: "";
   display: block;
   width: 0%;
   height: 3px;
   background-color: #c78030;
   margin-top: 4px;
   -webkit-transition: 0.4s;
-          transition: 0.4s;
+  transition: 0.4s;
 }
 .content .info-header-tab:hover:after {
   width: 60%;
@@ -201,7 +201,7 @@ header ul li:before {
   display: flex;
   padding-top: 50px;
   -webkit-transition: 0.3s;
-          transition: 0.3s;
+  transition: 0.3s;
 }
 .content .info-tabcontent .description,
 .content .info-tabcontent .photo {
@@ -212,7 +212,7 @@ header ul li:before {
   color: #c78030;
 }
 .content .info-tabcontent .description-title:after {
-  content: '';
+  content: "";
   display: block;
   width: 20%;
   height: 3px;
@@ -249,8 +249,8 @@ header ul li:before {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .content .info-tabcontent .photo img {
   width: 100%;
@@ -284,7 +284,7 @@ header ul li:before {
   color: #c78030;
 }
 .content .timer-numbers:after {
-  content: '';
+  content: "";
   display: block;
   width: 20%;
   height: 1px;
@@ -301,7 +301,7 @@ header ul li:before {
   color: #c78030;
 }
 .content .slider-title:after {
-  content: '';
+  content: "";
   display: block;
   width: 10%;
   height: 1px;
@@ -329,7 +329,7 @@ header ul li:before {
   left: 10%;
   background-color: rgba(0, 0, 0, 0);
   -webkit-transition: 0.3s;
-          transition: 0.3s;
+  transition: 0.3s;
   height: 100%;
 }
 .content .slider .wrap .prev:hover {
@@ -347,11 +347,11 @@ header ul li:before {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%);
-      -ms-transform: translate(-50%);
-          transform: translate(-50%);
-  opacity: .4;
+  -ms-transform: translate(-50%);
+  transform: translate(-50%);
+  opacity: 0.4;
   -webkit-transition: 1s;
-          transition: 1s;
+  transition: 1s;
 }
 .content .slider .wrap .next {
   position: absolute;
@@ -360,7 +360,7 @@ header ul li:before {
   width: 90px;
   background-color: rgba(0, 0, 0, 0);
   -webkit-transition: 0.3s;
-          transition: 0.3s;
+  transition: 0.3s;
   height: 100%;
   right: 10%;
 }
@@ -379,11 +379,11 @@ header ul li:before {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%);
-      -ms-transform: translate(-50%);
-          transform: translate(-50%);
-  opacity: .4;
+  -ms-transform: translate(-50%);
+  transform: translate(-50%);
+  opacity: 0.4;
   -webkit-transition: 1s;
-          transition: 1s;
+  transition: 1s;
 }
 .content .slider-dots {
   width: 90%;
@@ -395,8 +395,8 @@ header ul li:before {
   display: flex;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 .content .slider-dots .dot {
   cursor: pointer;
@@ -407,7 +407,7 @@ header ul li:before {
   border-radius: 50%;
   display: inline-block;
   -webkit-transition: background-color 0.6s ease;
-          transition: background-color 0.6s ease;
+  transition: background-color 0.6s ease;
 }
 .content .slider-dots .dot-active {
   background-color: #000;
@@ -415,7 +415,7 @@ header ul li:before {
   width: 18px;
 }
 .content .counter {
-  margin-top: 150px
+  margin-top: 150px;
   /* Для Firefox */
 }
 .content .counter-title {
@@ -423,7 +423,7 @@ header ul li:before {
   color: #c78030;
 }
 .content .counter-title:after {
-  content: '';
+  content: "";
   display: block;
   width: 20%;
   height: 1px;
@@ -439,12 +439,12 @@ header ul li:before {
   display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .content .counter-block-option {
   font-size: 22px;
@@ -480,14 +480,14 @@ header ul li:before {
 .content .counter-total span {
   font-size: 46px;
 }
-.content .counter input[type=number]::-webkit-inner-spin-button,
-.content .counter input[type=number]::-webkit-outer-spin-button {
+.content .counter input[type="number"]::-webkit-inner-spin-button,
+.content .counter input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   margin: 0;
 }
-.content .counter input[type=number] {
+.content .counter input[type="number"] {
   -moz-appearance: textfield;
 }
 .content .more {
@@ -523,8 +523,8 @@ header ul li:before {
 .content .contact-img img {
   height: 550px;
   -webkit-transform: translateY(-13%);
-      -ms-transform: translateY(-13%);
-          transform: translateY(-13%);
+  -ms-transform: translateY(-13%);
+  transform: translateY(-13%);
 }
 .content .contact-form {
   width: 50%;
@@ -537,7 +537,7 @@ header ul li:before {
   font-weight: 300;
 }
 .content .contact-form-title:after {
-  content: '';
+  content: "";
   display: block;
   width: 20%;
   height: 1px;
@@ -575,8 +575,8 @@ header ul li:before {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .content footer .social {
   display: -webkit-box;
@@ -585,12 +585,12 @@ header ul li:before {
   display: flex;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-top: 20px;
 }
 .content footer .social .social-block {
@@ -624,8 +624,8 @@ header ul li:before {
   top: 150px;
   width: 752px;
   -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 .overlay .popup-close {
   position: absolute;
